--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./main.css">
     <title>Galeria de fotos</title>
 </head>
 <body>
@@ -21,5 +21,6 @@
         <button type="submit">Adicionar</button>
         <button type="reset" id="button-cancelar">Cancelar</button>
     </form>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 </body>
 </html>
