--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
         <button type="reset" id="button-cancelar">Cancelar</button>
     </form>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
