--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <button type="submit">Adicionar</button>
         <button type="reset" id="button-cancelar">Cancelar</button>
     </form>
+    <ul>
+        <li>
+            <img src="./img/foto1.jpg" alt="imagem gato">
+        </li>
+    </ul>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="main.js"></script>
 </body>
