--- a/index.html
+++ b/index.html
@@ -23,7 +23,44 @@
     </form>
     <ul>
         <li>
-            <img src="./img/foto1.jpg" alt="imagem gato">
+            <img src="./img/foto1.jpg" alt="imagem gato" />
+            <div class="overlay-img-link">
+                <a href="./img/foto1.jpg" title="Ver imagem em tamanho real" target="_blank">
+                    Ver imagem em tamanho real
+                </a>
+            </div>
+        </li>
+        <li>
+            <img src="./img/foto2.jpg" alt="imagem ave" />
+            <div class="overlay-img-link">
+                <a href="./img/foto1.jpg" title="Ver imagem em tamanho real" target="_blank">
+                    Ver imagem em tamanho real
+                </a>
+            </div>
+        </li>
+        <li>
+            <img src="./img/foto3.jpg" alt="imagem cachoro" />
+            <div class="overlay-img-link">
+                <a href="./img/foto1.jpg" title="Ver imagem em tamanho real" target="_blank">
+                    Ver imagem em tamanho real
+                </a>
+            </div>
+        </li>
+        <li>
+            <img src="./img/foto4.jpg" alt="imagem flor 1" />
+            <div class="overlay-img-link">
+                <a href="./img/foto1.jpg" title="Ver imagem em tamanho real" target="_blank">
+                    Ver imagem em tamanho real
+                </a>
+            </div>
+        </li>
+        <li>
+            <img src="./img/foto5.jpg" alt="imagem flor 2" />
+            <div class="overlay-img-link">
+                <a href="./img/foto1.jpg" title="Ver imagem em tamanho real" target="_blank">
+                    Ver imagem em tamanho real
+                </a>
+            </div>
         </li>
     </ul>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
