--- a/index.html
+++ b/index.html
@@ -23,14 +23,6 @@
     </form>
     <ul>
         <li>
-            <img src="./img/foto1.jpg" alt="imagem gato" />
-            <div class="overlay-img-link">
-                <a href="./img/foto1.jpg" title="Ver imagem em tamanho real" target="_blank">
-                    Ver imagem em tamanho real
-                </a>
-            </div>
-        </li>
-        <li>
             <img src="./img/foto2.jpg" alt="imagem ave" />
             <div class="overlay-img-link">
                 <a href="./img/foto2.jpg" title="Ver imagem em tamanho real" target="_blank">
@@ -47,17 +39,17 @@
             </div>
         </li>
         <li>
-            <img src="./img/foto4.jpg" alt="imagem flor 1" />
+            <img src="./img/foto5.jpg" alt="imagem cachoro" />
             <div class="overlay-img-link">
-                <a href="./img/foto4.jpg" title="Ver imagem em tamanho real" target="_blank">
+                <a href="./img/foto5.jpg" title="Ver imagem em tamanho real" target="_blank">
                     Ver imagem em tamanho real
                 </a>
             </div>
         </li>
         <li>
-            <img src="./img/foto5.jpg" alt="imagem flor 2" />
+            <img src="./img/foto4.jpg" alt="imagem cachoro" />
             <div class="overlay-img-link">
-                <a href="./img/foto5.jpg" title="Ver imagem em tamanho real" target="_blank">
+                <a href="./img/foto4.jpg" title="Ver imagem em tamanho real" target="_blank">
                     Ver imagem em tamanho real
                 </a>
             </div>
