--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <form>
         <h2>Inserir nova imagem</h2>
-        <input type="url" required placeholder="Url da imagem" />
+        <input type="url" id="endereco-img-nova" required placeholder="Url da imagem" />
         <button type="submit">Adicionar</button>
         <button type="reset" id="button-cancelar">Cancelar</button>
     </form>
