--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </header>
     <form>
         <h2>Inserir nova imagem</h2>
-        <input type="url" id="endereco-img-nova" required placeholder="Url da imagem" />
+        <input type="url" id="endereco-imagem-nova" required placeholder="Url da imagem" />
         <button type="submit">Adicionar</button>
         <button type="reset" id="button-cancelar">Cancelar</button>
     </form>
     <ul>
         <li>
             <img src="./img/foto2.jpg" alt="imagem ave" />
-            <div class="overlay-img-link">
+            <div class="overlay-imagem-link">
                 <a href="./img/foto2.jpg" title="Ver imagem em tamanho real" target="_blank">
                     Ver imagem em tamanho real
                 </a>
@@ -32,7 +32,7 @@
         </li>
         <li>
             <img src="./img/foto3.jpg" alt="imagem cachoro" />
-            <div class="overlay-img-link">
+            <div class="overlay-imagem-link">
                 <a href="./img/foto3.jpg" title="Ver imagem em tamanho real" target="_blank">
                     Ver imagem em tamanho real
                 </a>
@@ -40,7 +40,7 @@
         </li>
         <li>
             <img src="./img/foto5.jpg" alt="imagem cachoro" />
-            <div class="overlay-img-link">
+            <div class="overlay-imagem-link">
                 <a href="./img/foto5.jpg" title="Ver imagem em tamanho real" target="_blank">
                     Ver imagem em tamanho real
                 </a>
@@ -48,7 +48,7 @@
         </li>
         <li>
             <img src="./img/foto4.jpg" alt="imagem cachoro" />
-            <div class="overlay-img-link">
+            <div class="overlay-imagem-link">
                 <a href="./img/foto4.jpg" title="Ver imagem em tamanho real" target="_blank">
                     Ver imagem em tamanho real
                 </a>
